<resources>
    <string name="app_name">Lista De Tareas</string>
    <string name="add_task">Añadir Tarea</string>
    <string name="enter_task_description">Introducir Descripción</string>
    <string name="pending_tasks">Tareas Pendientes</string>
    <string name="completed_tasks">Tareas Completadas</string>
    <string name="settings">Configuración</string>
    <string name="marcar_como_hecha">Marcar como Hecha</string>
    <string name="completada">Completada</string>
    <string name="eliminar_tarea">Eliminar Tarea</string>
    <string name="configuracion">Configuración</string>
    <string name="menu">Menú</string>
    <string name="dark_mode_enabled">Modo oscuro activado</string>
    <string name="light_mode_enabled">Modo claro activado</string>
    <string name="language_changed_es">Idioma cambiado a Español</string>
    <string name="language_changed_en">Idioma cambiado a Inglés</string>
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="activar_modo_oscuro">Activar Modo Oscuro</string>
    <string name="configuraci_n">Configuración</string>
    <string name="back">Volver</string>
    <string name="task_details">Detalles de las Tareas</string>
    <string name="task_list">Lista de Tareas</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="task_register">Registrar tareas</string>
    <string name="task_name">Nombre de la tarea</string>
    <string name="task_description">Descripción de la tarea</string>
    <string name="task_date">Fecha:</string>
    <string name="task_priority">Prioridad:</string>
    <string name="task_cost">Coste:</string>
    <string name="task_status">Estado:</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>


</resources>
